# BiDiPose3D

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md  pr.prompt.md
bidipose/datasets/: datamodule.py  dataset.py
bidipose/diffusion/: module.py  sampler.py  scheduler.py  utils.py
bidipose/eval/: metrics.py
bidipose/models/: __init__.py  base.py
bidipose/models/BinocularFormer/: model.py
bidipose/models/MixSTE/: model.py
bidipose/models/MotionAGFormer/: model.py
bidipose/models/MotionAGFormer/modules/: attention.py  graph.py  tcn.py
bidipose/models/MotionBERT/: drop.py  model.py
bidipose/preprocess/: camera.py  camera_sampler.py  sampler.py  utils.py
bidipose/statics/: bone.py  joints.py
bidipose/train/: module.py  trainer.py
bidipose/visualize/: animation_2d.py  animation_3d.py
configs/: config.yaml
configs/checkpoint/: checkpoint.yaml
configs/data/: stereocamera.yaml
configs/local/: example.yaml
configs/logger/: wandb.yaml
configs/model/: binocularformer.yaml  mixste.yaml  motion_ag_former.yaml  motion_bert.yaml
configs/module/: diffusion.yaml
configs/sampler/: ddpm_cosine.yaml  ddpm_linear.yaml  ddpm_quadratic.yaml
configs/trainer/: trainer.yaml
tests/: test_mask.py  test_metrics.py  test_models.py  test_module.py  test_preprocess.py  test_sampler.py  test_scheduler.py  test_train.py  test_visualization.py
